--- a/shout/www/app/settings/tab-settings.html
+++ b/shout/www/app/settings/tab-settings.html
@@ -48,10 +48,10 @@
 
       <ion-item class="item-divider">
       </ion-item>
-      <ion-item class="">
+      <ion-item >
         <button class="button button-block button-positive" ng-click="vm.saveSettings()">Save Settings</button>
       </ion-item>
-      <ion-item class="">
+      <ion-item >
         <button class="button button-block button-positive" ng-click="vm.logOut()">Log Out</button>
       </ion-item>
 
