--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -1,11 +1,12 @@
 <ion-view view-title="Album">
-  <ion-content class="padding">
+  <ion-content class="no-padding">
     <!-- <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher> -->
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item ng-repeat="photo in vm.album" item-height="20vh" item-width="80%">
-        <ion-option-button class="button-light icon ion-ios-trash" ng-click="vm.deleteFromAlbum(photo)"></ion-option-button>
-        <a class="item clear-bg item-bg-image waves-effect waves-button waves-light has-mask-reverse">
+      <ion-item class="photo" ng-repeat="photo in vm.album">
+        <a class="item clear-bg item-thumbnail-left photo" href="#">
           <img ng-src="{{vm.url(photo.photoId)}}">
+          <h2>Pretty Hate Machine</h2>
+          <p>Nine Inch Nails</p>
         </a>
       </ion-item>
     </ion-list>
