--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -6,17 +6,16 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <meta http-equiv="Content-Security-Policy" content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;">
 
-  <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+
+  <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
+
   <script src="lib/underscore/underscore-min.js"></script>
-
-
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
-  <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
-  <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
+  <script src="lib/ionic-material/dist/ionic.material.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
@@ -26,7 +25,6 @@
   <script src="dist/shout.js"></script>
 
   <link href="css/style.css" rel="stylesheet">
-  <link href="css/ion-md-input.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +32,7 @@
 
   <!-- The nav bar that will be updated as we navigate between views. -->
 
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar align-title="center" class="flat">
     </ion-nav-bar>
       <ion-nav-view>
         <ion-nav-back-button>
