Fix the Background repeat problem

--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -1,6 +1,4 @@
-<ion-view class="signupScreen" hide-nav-bar="true"
-  style="background-image: url('img/bg.png');"
-view-title="Login" align-title="left">
+<ion-view class="signupScreen" hide-nav-bar="true" view-title="Login" align-title="left">
   <!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
   <ion-content>
 
