--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -1,5 +1,4 @@
-<ion-view class="loginScreen" hide-nav-bar="true" style="background-image: url('img/bg.png');"
-view-title="Login" align-title="left">
+<ion-view class="loginScreen" hide-nav-bar="true" view-title="Login" align-title="left">
   <!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
   <ion-content>
 
