Added facebook login to index.html

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -32,6 +32,13 @@ view-title="Login" align-title="left">
       </label>
         <div class="padding">
           <button class="button button-block button-positive" data-ink-color="#3AFEA4" data-ink-opacity=".8" ng-click="vm.login()">Sign In</button>
+          <div style="background-color:transparent" class="bar bar-footer bar-clear">
+            </div>
+        </div>
+        <div class="padding">
+          <button class="button button-block button-positive facebook" data-ink-color="#3AFEA4" data-ink-opacity=".8" ng-click="vm.fbLogin()">Or sign in with Facebook</button>
+          <div style="background-color:transparent" class="bar bar-footer bar-clear">
+            </div>
         </div>
       </div>
     </div>
