--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -2,7 +2,8 @@
   <!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
   <ion-content>
 
-      <div class="loginTitle">Ripple</div>
+      <!-- <div class="loginTitle" class="animated infinite bounce">Ripple</div> -->
+      <div class="animated flipInX loginTitle ">Ripple</div>
     <div class="ionic login">
       <div class="hero no-header flat">
         <div class="content">
