--- a/shout/www/app/broadcast/tab-broadcast.html
+++ b/shout/www/app/broadcast/tab-broadcast.html
@@ -1,4 +1,10 @@
 <ion-view view-title="BroadCast">
+  <ion-nav-buttons side="primary">
+    <button class="button icon ion-chevron-left button-clear" ng-click="doSomething()">
+      <!-- <i class="ion&#45;chevron&#45;left"></i> -->
+    </button>
+  </ion-nav-buttons>
+
   <ion-content class="padding">
     <ion-list>
       <ion-item class="item item-toggle item-divider">
@@ -13,23 +19,23 @@
 
       <ion-item class="item item-toggle item-divider">
         Trickle</br>
-          <label class="toggle toggle-positive">
-            <input type="checkbox" ng-model="vm.settings.trickle" ng-change="vm.setTrickle()">
+        <label class="toggle toggle-positive">
+          <input type="checkbox" ng-model="vm.settings.trickle" ng-change="vm.setTrickle()">
           <div class="track">
             <div class="handle"></div>
           </div>
-          </label>
+        </label>
       </ion-item>
 
       <ion-item class="item item-range item-divider no-padding">
         <label class="range range-positive">
           {{vm.settings.radius | number:1}} mi&nbsp&nbsp</br>
-          <input type="range" name="radius" ng-model="vm.settings.radius" min="0.1" step="0.1" max="5"
-          value="{{vm.radius}}">
+          <input type="range" name="radius" ng-model="vm.settings.radius" min="0.1" step="0.1"
+          max="5" value="{{vm.radius}}">
           <i class="icon ion-ios-world-outline"></i>
-        <div class="track">
-          <div class="handle"></div>
-        </div>
+          <div class="track">
+            <div class="handle"></div>
+          </div>
         </label>
       </ion-item>
 
@@ -39,9 +45,9 @@
           <input type="range" ng-model="vm.settings.TTL" min="0.5" step="0.5" max="5" ng-init="5"
           value="{{vm.TTL}}">
           <i class="icon ion-ios-stopwatch-outline"></i>
-        <div class="track">
-          <div class="handle"></div>
-        </div>
+          <div class="track">
+            <div class="handle"></div>
+          </div>
         </label>
       </ion-item>
 
