--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -2,12 +2,18 @@
   <ion-content class="no-padding">
     <!-- <ion-refresher on-refresh="vm.doRefresh()"></ion-refresher> -->
     <ion-list class="condensed-space no-padding" can-swipe="true">
-      <ion-item class="photo" ng-repeat="photo in vm.album">
-        <a class="item clear-bg item-thumbnail-left photo" href="#">
+      <ion-item class="row photo" ng-repeat="photo in vm.album">
+        <a class="col item clear-bg item-thumbnail-left photo" href="#">
           <img ng-src="{{vm.url(photo.photoId)}}">
+        </a>
+        <div class="col float-container">
           <h2>Pretty Hate Machine</h2>
           <p>Nine Inch Nails</p>
-        </a>
+          <p>Ripple ID: {{photo.photoId}}</p>
+            <div class="inbox button-bar flat">
+              <button class="button button-clear flat icon ion-ios-trash-outline" ng-click="vm.deleteFromAlbum(photo)"></button>
+            </div>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
