--- a/shout/www/app/review/tab-review.html
+++ b/shout/www/app/review/tab-review.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Review">
-  <ion-nav-buttons side="primary">
-    <button class="button button-clear icon ion-chevron-left" ng-click="vm.takePhoto()">
+  <ion-nav-buttons side="left">
+    <button class="button button-clear" ng-click="vm.takePhoto()">
+      <i class="ion-chevron-left"></i>
     </button>
   </ion-nav-buttons>
   <ion-content class="padding">
