--- a/shout/www/app/broadcast/tab-broadcast.html
+++ b/shout/www/app/broadcast/tab-broadcast.html
@@ -50,6 +50,15 @@
       <ion-item>
         <button class="button button-block button-positive" ng-click="vm.sharePhoto()">BroadCast</button>
       </ion-item>
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+          <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
+        </div>
+        <div class="col">
+        </div>
+      </div>  
 
     </ion-list>
 
