--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -25,6 +25,15 @@
           <span class="input-label">PASSWORD</span>
           <input style="background-color:transparent" type="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" ng-model="vm.data.password">
         </label>
+        <div class="row">
+          <div class="col">
+          </div>
+          <div class="col">
+            <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
+          </div>
+          <div class="col">
+          </div>
+        </div>  
       <div class="padding">
         <button class="button button-block button-positive ink" ng-click="vm.signup()">Sign Up</button>
       </div>
