add home button, highlight header/footer

--- a/shout/www/app/broadcast/tab-broadcast.html
+++ b/shout/www/app/broadcast/tab-broadcast.html
@@ -1,7 +1,12 @@
 <ion-view view-title="BroadCast">
   <ion-nav-buttons side="left">
     <button class="button button-clear" ng-click="vm.goBack()">
-      <i class="ion-chevron-left"></i>
+      <i class="ion-ios-arrow-left"></i>
+    </button>
+  </ion-nav-buttons>
+  <ion-nav-buttons side="right">
+    <button class="button button-clear" ng-click="vm.goInbox()">
+      <i class="ion-ios-email-outline"></i>
     </button>
   </ion-nav-buttons>
 
