Centers Logo and changes color, Keeps corners of popup Rounded, removes 1000's of lines of CSS

--- a/shout/www/app/login/login.html
+++ b/shout/www/app/login/login.html
@@ -3,7 +3,7 @@
   <ion-content>
 
       <!-- <div class="loginTitle" class="animated infinite bounce">Ripple</div> -->
-      <div class="animated bounceInUp loginTitle ">Ripple</div>
+      <div class="animated bounceInDown loginTitle">Ripple</div>
     <div class="ionic login">
       <div class="hero no-header flat">
         <div class="content">
