--- a/shout/www/index.html
+++ b/shout/www/index.html
@@ -25,6 +25,7 @@
   <script src="dist/shout.js"></script>
 
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
 
 </head>
 
