--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -3,6 +3,7 @@
     <ion-list class="condensed-space no-padding" can-swipe="true">
       <ion-item class="row photo" ng-repeat="photo in vm.inbox">
         <a class="col item clear-bg item-thumbnail-left photo" href="#">
+          <p>There is nothing in your Inbox<p>
           <img ng-src="{{vm.url(photo.photoId)}}">
         </a>
         <div class="col float-container">
