--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -25,5 +25,5 @@
     </ion-list>
     <ion-refresher on-refresh="vm.refresh()"></ion-refresher>
   </ion-content>
-  <div class='emptyInbox' ng-hide="vm.inbox.length">You have no new Ripples</div>
+    <div class="emptyInbox" ng-hide="vm.inbox.length">You have no new Ripples</div>
 </ion-view>
