--- a/shout/www/app/login/signup.html
+++ b/shout/www/app/login/signup.html
@@ -1,131 +1,49 @@
 <ion-view class="signupScreen" hide-nav-bar="true" view-title="Login" align-title="left">
-  <!--<ion-content style="background: url(img/ripple.jpeg) center; background-size: cover;">-->
   <ion-content>
-
     <div class="loginTitle">Ripple</div>
-      <div class="hero no-header flat">
-        <div class="content">
-          <i class="ion-ios-color-filter-outline icon hero-icon clear-bg"></i>
-        </div>
+    <div class="hero no-header flat">
+      <div class="content">
+        <i class="ion-ios-color-filter-outline icon hero-icon clear-bg"></i>
       </div>
-      <div class="list padding">
-        <label class="item item-input item-stacked-label">
-          <i class="icon ion-ios-person-outline placeholder-icon"></i>
-          <span class="input-label">NAME</span>
-          <input class="login-input" style="background-color:transparent" type="text" placeholder="Enter Name" ng-model="vm.data.username">
-        </label>
-        <label class="item item-input item-stacked-label">
-          <i class="icon ion-ios-email-outline placeholder-icon"></i>
-          <span class="input-label">EMAIL</span>
-          <input class="login-input" style="background-color:transparent" type="email" placeholder="Enter Email" ng-model="vm.data.email">
-        </label>
-        </label>
-        <label class="item item-input item-stacked-label">
-          <i class="icon ion-ios-locked-outline placeholder-icon"></i>
-          <span class="input-label">PASSWORD</span>
-          <input style="background-color:transparent" type="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" ng-model="vm.data.password">
-        </label>
-        <div class="row">
-          <div class="col">
-          </div>
-          <div class="col">
-          </div>
-        </div>  
-      <div class="padding">
-        <button class="button button-block button-positive ink" ng-click="vm.signup()">Sign Up</button>
-      </div>
-      </div>
-      <!-- <div class="button&#45;bar"> -->
-      <!--   <button class="button button&#45;small button&#45;outline button&#45;assertive light&#45;bg icon&#45;left ion&#45;social&#45;google waves&#45;effect waves&#45;button waves&#45;light">Google+</button> -->
-      <!--   <button class="button button&#45;small button&#45;outline button&#45;positive light&#45;bg icon&#45;left ion&#45;social&#45;facebook waves&#45;effect waves&#45;button waves&#45;light">Facebook</button> -->
-      <!-- </div> -->
-      <div><img type="image/svg+xml" data="img/line.svg"/></div>
-
-    <!-- <div class="list"> -->
-    <!--   <label class="item item&#45;input item&#45;stacked&#45;label"> -->
-    <!--     <span class="input&#45;label">NAME</span> -->
-    <!--     <input type="text" placeholder="Enter Name"> -->
-    <!--   </label> -->
-    <!--   </label> -->
-    <!--   <label class="item item&#45;input item&#45;stacked&#45;label"> -->
-    <!--     <span class="input&#45;label">PASSWORD</span> -->
-    <!--     <input type="password" placeholder="********"> -->
-    <!--   </label> -->
-    <!--   <button class="item button loginButton" ng&#45;click="vm.login()">Sign In</button> -->
-    <!-- </div> -->
-    <div class="col">
-      <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
     </div>
-
+    <div class="list padding login">
+      <label class="item item-input item-stacked-label">
+        <i class="icon ion-ios-person-outline placeholder-icon"></i>
+        <span class="input-label">NAME</span>
+        <input class="clear-bg" type="text" placeholder="Enter Name"
+        ng-model="vm.data.username">
+      </label>
+      <label class="item item-input item-stacked-label">
+        <i class="icon ion-ios-email-outline placeholder-icon"></i>
+        <span class="input-label">EMAIL</span>
+        <input class="clear-bg" type="email" placeholder="Enter Email"
+        ng-model="vm.data.email">
+      </label>
+      <label class="item item-input item-stacked-label">
+        <i class="icon ion-ios-locked-outline placeholder-icon"></i>
+        <span class="input-label">PASSWORD</span>
+        <input class="clear-bg" type="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;"
+        ng-model="vm.data.password">
+      </label>
+    </div>
+      <label class="item item-input item-stacked-label">
+        <div class="">
+          <button class="button button-block button-positive" ng-show="!vm.spinner" ng-click="vm.signup()">Sign Up</button>
+        </div>
+        <div class="row">
+          <ion-spinner ng-show="vm.spinner" class="spinner" icon="ripple"></ion-spinner>
+        </div>
+        <div class="row">
+          <button class="button button-clear facebook" ng-show="!vm.spinner" ng-click="vm.fbLogin()">Sign up with Facebook</button>
+        </div>
+      </label>
   </ion-content>
-  <div style="background-color:transparent" class="bar bar-footer bar-clear">
-    <a style="background-color:transparent" class="title" href="#/login"><span class="account">ALREADY HAVE AN ACCOUNT?</span> <span class="signup">SIGN IN</span></a>
+  <div class="row signup">
+    <a class="signup" href="#/login"><span class="account">ALREADY HAVE AN ACCOUNT?</span> <span class="signup">SIGN IN</span></a>
   </div>
 </ion-view>
 
-
-<!--
-<ion-view class="loginView">
-  <ion-content class="padding">
-    <div class="loginTitleContainer">
-      <div class="loginTitle">RIPPLE</div>
-    </div>
-    <div class="loginInputContainer">
-      <div class="loginInputBox">
-        <input class="loginInputItem" type="text" placeholder="Username" ng-model="vm.data.username">
-        <input class="loginInputItem" type="email" placeholder="Email" ng-model="vm.data.email">
-        <input class="loginInputItem" type="password" placeholder="Password" ng-model="vm.data.password">
-      </div>
-    </div>
-    <div class="padding">
-      <button ng-if="vm.badCombo" class="button button-outline button-assertive">
-        Incorrect username/password combination
-      </button>
-    </div>
-    <div class="loginButtonContainer">
-      <button class="item button loginButton" ng-click="vm.login()">Login</button>
-      <button class="item button loginButton" ng-hide=false ui-sref="signup">Sign Up</button>
-    </div>
-  </ion-content>
-</ion-view>
--->
-<!-- <ion&#45;view class="signupScreen" hide&#45;nav&#45;bar="true" view&#45;title="Signup" align&#45;title="left"> -->
-<!-- <!&#45;&#45;<ion&#45;content style="background: url(img/ripple.jpeg) center; background&#45;size: cover;">&#45;&#45;> -->
-<!--   <ion&#45;content> -->
-<!--     <div class="row"> -->
-<!--       <div class="col"> -->
-<!--         <div class="loginTitle">RIPPLE</div> -->
-<!--       </div> -->
-<!--     </div> -->
-<!--     <div class="padding"> -->
-<!--       <ion&#45;md&#45;input class="loginItem" placeholder="Name" hightlight&#45;color="positive"     type="text" ng&#45;model="vm.data.username" value="{{vm.data.username}}"></ion&#45;md&#45;input> -->
-<!--       <ion&#45;md&#45;input class="loginItem" placeholder="Email" hightlight&#45;color="positive"    type="email" ng&#45;model="vm.data.email" value="{{vm.data.email}}"></ion&#45;md&#45;input> -->
-<!--       <ion&#45;md&#45;input class="loginItem" placeholder="Password" hightlight&#45;color="positive" type="password" ng&#45;model="vm.data.password" value="{{vm.data.password}}"></ion&#45;md&#45;input> -->
-<!--     </div> -->
-<!--     <div class="padding"> -->
-<!--       <button ng&#45;click="vm.signup()" class="button button&#45;block button&#45;positive flat ink ">Sign Up</button> -->
-<!--     </div> -->
-<!--     <div class="padding row"> -->
-<!--       <div class="col"> -->
-<!--       </div> -->
-<!--       <div class="col"> -->
-<!--         <div class="flex"> -->
-<!--           <button ng&#45;click="vm.fbLogin()" class="button button&#45;positive&#45;900 button&#45;fab ink"> -->
-<!--             <i class="icon ion&#45;social&#45;facebook"></i> -->
-<!--           </button> -->
-<!--         </div> -->
-<!--       </div> -->
-<!--       <div class="col"> -->
-<!--       </div> -->
-<!--       <div class="col"> -->
-<!--         <div class="flex"> -->
-<!--           <button ng&#45;click="vm.signup()" class="button button&#45;assertive button&#45;fab ink"> -->
-<!--             <i class="icon ion&#45;social&#45;google"></i> -->
-<!--           </button> -->
-<!--         </div> -->
-<!--       </div> -->
-<!--       <div class="col"> -->
-<!--       </div> -->
-<!--     </div> -->
-<!--   </ion&#45;content> -->
-<!-- </ion&#45;view> -->
+<!-- <div class="button&#45;bar"> -->
+<!--   <button class="button button&#45;small button&#45;outline button&#45;assertive light&#45;bg icon&#45;left ion&#45;social&#45;google waves&#45;effect waves&#45;button waves&#45;light">Google+</button> -->
+<!--   <button class="button button&#45;small button&#45;outline button&#45;positive light&#45;bg icon&#45;left ion&#45;social&#45;facebook waves&#45;effect waves&#45;button waves&#45;light">Facebook</button> -->
+<!-- </div> -->
