--- a/shout/www/app/inbox/tab-inbox.html
+++ b/shout/www/app/inbox/tab-inbox.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
-              <div class="thumb" style="background-image: url({{photo.url}})"></div>
+              <div class="thumb" style="background-image: url({{photo.url}})" ng-click="vm.openModal(photo)"></div>
             </div>
             <div class="col ripplecard">
                 <p>{{photo.caption}}</p>
