--- a/shout/www/app/album/tab-album.html
+++ b/shout/www/app/album/tab-album.html
@@ -6,7 +6,7 @@
         <div class="card">
           <div class="row ripplecard">
             <div class="col ripplecard">
-              <div class="thumb" style="background-image: url({{photo.url}})"></div>
+              <div class="thumb" style="background-image: url({{photo.url}})" ng-click="vm.openModal(photo)"></div>
             </div>
             <div class="col ripplecard">
               <div class="row ripplecardinfo">
